fixed white space

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body, html {
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
   }
   
   .bg {
